@@ -66,7 +66,7 @@ AutoIncBuild=1
 MajorVer=0
 MinorVer=0
 Release=5
-Build=7
+Build=8
 Debug=0
 PreRelease=1
 Special=0
@@ -77,7 +77,7 @@ CodePage=1252
 [Version Info Keys]
 CompanyName=Damjan Zobo Cvetko
 FileDescription=DBGP Plugin for Notepad++
-FileVersion=0.0.5.7
+FileVersion=0.0.5.8
 InternalName=
 LegalCopyright=GPL
 LegalTrademarks=
